@@ -1,7 +1,7 @@
 #
 #   plot.fasp.R
 #
-#   $Revision: 1.31 $   $Date: 2022/11/03 11:08:33 $
+#   $Revision: 1.34 $   $Date: 2025/12/23 01:10:49 $
 #
 plot.fasp <- function(x, formule=NULL, ..., subset=NULL,
                       title=NULL, banner=TRUE,
@@ -10,14 +10,18 @@ plot.fasp <- function(x, formule=NULL, ..., subset=NULL,
                       mar.panel=NULL,
                       outerlabels=TRUE, cex.outerlabels=1.25,
                       legend=FALSE) {
-  # plot dimensions
+  
+  do.plot <- !isFALSE(list(...)$do.plot)
+  
+  #' dimensions of array of plot panels
   which <- x$which
   if(transpose)
     which <- t(which)
   nrows  <- nrow(which)
   ncols  <- ncol(which)
+
   
-# Determine the overall title of the plot
+  #' Determine the overall title of the plot
   if(banner) {
     if(!is.null(title)) overall <- title
     else if(!is.null(x$title)) overall <- x$title
@@ -35,7 +39,7 @@ plot.fasp <- function(x, formule=NULL, ..., subset=NULL,
       if(!is.character(overall)) 1 else length(unlist(strsplit(overall, "\n")))
   } 
 
-# If no formula is given, look for a default formula in x:
+  #' If no formula is given, look for a default formula in x:
   defaultplot <- is.null(formule)
   if(defaultplot && !is.null(x$default.formula))
     formule <- x$default.formula
@@ -52,7 +56,7 @@ plot.fasp <- function(x, formule=NULL, ..., subset=NULL,
       stop(paste("Wrong number of entries in", sQuote("formule")))
   }
   
-# Check on the length of the subset argument.
+  #' Check on the length of the subset argument.
   ns <- length(subset)
   if(ns > 1) {
     if(ns != length(x$fns))
@@ -60,11 +64,11 @@ plot.fasp <- function(x, formule=NULL, ..., subset=NULL,
     msub <- TRUE
   } else msub <- FALSE
 
-# compute common x, y axis limits for all plots ?
+  #' compute common x, y axis limits for all plots ?
   xlim <- ylim <- NULL
   if(samex || samey) {
     cat("Computing limits\n")
-    # call plot.fv to determine plot limits of each panel
+    #' call plot.fv to determine plot limits of each panel
     for(i in 1:nrows) {
       for(j in 1:ncols) {
         k <- which[i,j]
@@ -81,14 +85,14 @@ plot.fasp <- function(x, formule=NULL, ..., subset=NULL,
     }
   } 
 
-#############################################################  
-# Set up the plot layout
+  #############################################################  
+  #' Set up the plot layout
   n <- nrows * ncols
-# panels 1..n = plot panels
+  #' panels 1..n = plot panels
   codes <- matrix(seq_len(n), byrow=TRUE, ncol=ncols, nrow=nrows)
   heights <- rep.int(1, nrows)
   widths  <- rep.int(1, ncols)
-# annotation as chosen
+  #' annotation as chosen
   if(outerlabels) {
     # column headings
     colhead.codes <- max(codes) + (1:ncols)
@@ -109,30 +113,43 @@ plot.fasp <- function(x, formule=NULL, ..., subset=NULL,
     heights <- c(top.height, heights)
   }
 
-# declare layout  
-  layout(codes, widths=widths, heights=heights)
+  #' declare layout
+  if(do.plot) 
+    layout(codes, widths=widths, heights=heights)
 
-############################################################  
-# Plot the function panels 
-#
-# determine annotation
+  ############################################################  
+  #' Plot the function panels 
+  #'
   colNames <- colnames(which)
   rowNames <- rownames(which)
   nrc <- max(nrows, ncols)
-  ann.def <- par("ann") && (nrc <= 3)
-# determine margin around each panel
-  if(is.null(mar.panel)) 
-    mar.panel <- if(nrc > 3 && outerlabels) rep.int(1/nrc, 4) else par("mar")
-  opa <- par(mar=mar.panel, xpd=TRUE)
-  on.exit(par(opa))
-#
-# plot each function  
+
+  #' determine annotation arguments for each plot
+  if(do.plot) {
+    ann.def <- par("ann") && (nrc <= 3)
+    ann.info <- list(ann=ann.def, axes=ann.def)
+  } else {
+    ann.info <- NULL
+  }
+
+  #' determine margin around each panel
+  if(do.plot) {
+    if(is.null(mar.panel)) 
+      mar.panel <- if(nrc > 3 && outerlabels) rep.int(1/nrc, 4) else par("mar")
+    opa <- par(mar=mar.panel, xpd=TRUE)
+    on.exit(par(opa))
+  }
+
+  result <- list()
+  #' plot each function  
   for(i in 1:nrows) {
     for(j in 1:ncols) {
       k <- which[i,j]
       if(is.na(k)) {
-        plot(0,0,type='n',xlim=c(0,1),
-                        ylim=c(0,1),axes=FALSE,xlab='',ylab='', ...)
+        if(do.plot)
+          plot(0,0,type='n',xlim=c(0,1),
+               ylim=c(0,1),axes=FALSE,xlab='',ylab='', ...)
+        resultij <- NULL
       } else {
         fun <- as.fv(x$fns[[k]])
         fmla <- if(!defaultplot) formule[k] else NULL
@@ -141,46 +158,50 @@ plot.fasp <- function(x, formule=NULL, ..., subset=NULL,
                 if(nrows == 1) colNames[j] else
                 if(ncols == 1) rowNames[i] else 
                 paren(paste(rowNames[i], colNames[j], sep=","))
-        do.call(plot,
-                resolve.defaults(list(x=quote(fun), 
-				      fmla=quote(fmla), 
-				      subset=quote(sub)),
-                                 list(...),
-                                 list(xlim=xlim, ylim=ylim,
-                                      main=main, legend=legend),
-                                 list(ann=ann.def, axes=ann.def,
-                                      frame.plot=TRUE)))
+        resultij <-
+          do.call(plot,
+                  resolve.defaults(list(x=quote(fun), 
+                                        fmla=quote(fmla), 
+                                        subset=quote(sub)),
+                                   list(...),
+                                   list(xlim=xlim, ylim=ylim,
+                                        main=main, legend=legend,
+                                        frame.plot=TRUE),
+                                   ann.info))
+      }
+      result <- append(result, list(resultij))
+    }
+  }
+  ############################################################
+  #'
+  if(do.plot) {
+    #' Annotation as selected
+    if(outerlabels) {
+      par(mar=rep.int(0,4), xpd=TRUE)
+      #' Plot the column headers
+      for(j in 1:ncols) {
+        plot(numeric(0),numeric(0),type="n",ann=FALSE,axes=FALSE,
+             xlim=c(-1,1),ylim=c(-1,1))
+        text(0,0,colNames[j], cex=cex.outerlabels)
+      }
+      #' Plot the row labels
+      for(i in 1:nrows) {
+        plot(numeric(0),numeric(0),type="n",ann=FALSE,axes=FALSE,
+             xlim=c(-1,1),ylim=c(-1,1))
+        text(0,0,rowNames[i], srt=90, cex=cex.outerlabels)
       }
     }
-  }
-############################################################
-#
-# Annotation as selected
-  if(outerlabels) {
-    par(mar=rep.int(0,4), xpd=TRUE)
-    # Plot the column headers
-    for(j in 1:ncols) {
+    if(banner) {
+      par(mar=rep.int(0,4), xpd=TRUE)
+      #' plot the banner
       plot(numeric(0),numeric(0),type="n",ann=FALSE,axes=FALSE,
            xlim=c(-1,1),ylim=c(-1,1))
-      text(0,0,colNames[j], cex=cex.outerlabels)
+      cex <- resolve.defaults(list(...), list(cex.title=2))$cex.title
+      text(0,0, overall, cex=cex)
     }
-    # Plot the row labels
-    for(i in 1:nrows) {
-      plot(numeric(0),numeric(0),type="n",ann=FALSE,axes=FALSE,
-           xlim=c(-1,1),ylim=c(-1,1))
-      text(0,0,rowNames[i], srt=90, cex=cex.outerlabels)
-    }
-  }
-  if(banner) {
-    par(mar=rep.int(0,4), xpd=TRUE)
-    # plot the banner
-    plot(numeric(0),numeric(0),type="n",ann=FALSE,axes=FALSE,
-         xlim=c(-1,1),ylim=c(-1,1))
-    cex <- resolve.defaults(list(...), list(cex.title=2))$cex.title
-    text(0,0, overall, cex=cex)
-  }
+    #' revert
+    layout(1)
+  }    
   
-  # revert
-  layout(1)
-  return(invisible(NULL))
+  return(invisible(result))
 }
