@@ -18,4 +18,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2025-07-22" "3.5-2" 242 564 0 34447 6364
 "2025-09-22" "3.5-3" 242 565 0 34506 6364
 "2025-11-22" "3.6-0" 246 574 0 34848 6364
-"2025-12-22" "3.6-0.003" 246 575 0 34908 6364
+"2025-12-23" "3.6-0.004" 246 575 0 34937 6364
