@@ -89,7 +89,7 @@ local({
 #'
 #' Test whether plot(do.plot=FALSE) has no side effects on graphics system
 #'
-#'  $Revision: 1.4 $  $Date: 2025/12/22 08:29:32 $
+#'  $Revision: 1.6 $  $Date: 2025/12/23 00:24:24 $
 
 local({
   if(FULLTEST) {
@@ -120,8 +120,10 @@ local({
     
 
 
+    chk(plot(Kest(cells), do.plot=FALSE))
     chk(plot(ssf(cells, nndist(cells)), do.plot=FALSE))
     chk(plot(density(split(amacrine)), do.plot=FALSE))
+    chk(plot(alltypes(amacrine), do.plot=FALSE))
 
 
 
